app/ui/globals.css
@import "tailwindcss";

:root {
    --background: #fff8f6;
    --foreground: #fff8f6;
    --secondary: #070002;
    --color-accent: #a3002c;
    --color-footertext: #a3002c;
    --color-lighthighlight: #ed8c91;
    --color-verylightpink: #ffacbf;
    --color-taupe: #d4a0a7;
    --color-bodytext: #070002;

    --scroll-bg: #a3002c;
    /* --scroll-bg: #770020; */
    --scroll-text: #fff8f6;
    --scroll-nav: #fff8f6;
}

.dark {
    --background: #1a1819;
    --foreground: #fff8f6;
    --secondary: #070002;
    --color-accent: #ed8c91;
    --color-footertext: #fff8f6;
    --color-lighthighlight: #a3002c;
    --color-bodytext: #fff8f6;
    --color-lightpink: #ed8c91;
}

@theme {
    --color-accent: #a3002c;
    --color-lighthighlight: #ed8c91;
    --color-lighthighlight-rgb: 237, 140, 145;
    --color-bodytext: var(--color-bodytext);
    --color-lightpink: #ed8c91;
}

::selection {
    background: rgba(var(--color-lighthighlight-rgb), 0.4);
}

@keyframes shadow-pulse {
    0%,
    100% {
        box-shadow: none;
    }
    50% {
        box-shadow: 0 0 4px 4px #ed8c91;
    }
}

.shadow-pulse {
    animation: shadow-pulse 1.5s ease-in-out 1;
}

.change-bg {
    background-color: var(--scroll-bg);
    color: var(--scroll-text);
}

.arrow-bounce {
    animation: bounce 1s ease-in-out infinite;
}

.selected {
    background-color: color-mix(in oklab, #d58789 40%, transparent);
}

body {
    background: var(--background);
    color: var(--foreground);
}

/* link underline that slides up on hover */
.link {
    /* color: var(--color-bodytext); */
    background-image: linear-gradient(
        rgba(var(--color-lighthighlight-rgb), 0.4),
        rgba(var(--color-lighthighlight-rgb), 0.4)
    );
    background-size: 100% 0.1em;
    background-position-y: 100%;
    background-repeat: no-repeat;
    transition: background-size 0.15s ease-in-out;
}

.link:hover,
.link:focus,
.link:active {
    background-size: 100% 90%;
}

